--- a/index.html
+++ b/index.html
@@ -1,9 +1,59 @@
+<!DOCTYPE html>
 <html>
-
+   <head>
+      <title> Kinesiólogo Smiljan Goic </title>
+      <link rel="stylesheet" href="./files/styles.css" type="text/css">
+   </head>
 <body>
-  <h1>Smiljan Goic Chambers </h1>
-  <p>Bienvenidos a mi repositorio web de ejercicio terapéutico</p>
-  <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
-</body>
+  <header>
+    <nav>
+      <ul>
+        <li><a href="#historia"> Historia y trayectoria</a></li>
+        <li><a href="#servicios">Servicios</a></li>
+        <li><a href="#contacto">Contacto</a></li>
+      </ul>
+    </nav>
+  </header>
+  <section id="historia">
+    <h2>Historia y trayectoria profesional</h2>
+      <p>Mi nombre es Smiljan, y quiero contarte mi historia.  
+Desde los 14 años (2003) comencé a practicar Voleibol, el cual me acompañó durante todo mi período de formación escolar. En este tiempo pasé por las selecciones del Club Deportivo Universidad Católica y por el proceso de selecciones menores de Chile (2 años seguidos, entrenando 6 días a la semana, 3 horas cada día) en el Centro de Alto Rendimiento. Todo este camino y entrega daría sus frutos para mi ingreso a la educación superior, donde gracias a mi trayectoria deportiva, pude obtener una beca que cubría un tercio del costo del arancel mensual; el resto: lo asumió mi madre a quién le estaré eternamente agradecido.   Ya con ese camino recorrido, me había tocado vivir las lesiones desde cerca, siendo este uno de los motivos por el cual decidí estudiar kinesiología. 
+El 2012 previo a un entrenamiento de voleibol decidí anormalmente asistir en bicicleta. A dos cuadras de mi casa, literalmente, tuve un accidente. Era una calle oscura y estaba de noche cuando un chico skater salió de la nada, muy lento y el choque fue inevitable. Resultado: impacto directo con la bicicleta y yo volando por los aires. Todo el impacto de la caída lo amortigüé con mi mano izquierda, resultando en fractura de Escafoides, un hueso pequeño de la muñeca. Pequeño, pero con muy pocas chances de cicatrizar y consolidar de buena manera, principalmente debido a su irrigación.
+Obtengo mi título profesional el año 2014, ya habiendo comenzado mi programa de Magíster en Intervenciones Terapéuticas Respiratorias el año 2013. Tras la recolección de datos, análisis y largos períodos de corrección, el año 2017 obtengo mi grado académico de Magíster, a través de la defensa de mi tesis.
+El mismo 2014 recibo el diagnóstico de Fractura de lámina vertebral L5, asociado a múltiples discopatías, espondilolistesis (desplazamiento anterior de una vértebra) y hernias en segmentos T11,T12,L4,L5,S1. Resultado: ¡el dolor no me abandonaba en ninguna actividad!. Caminaba y me dolía, me sentaba y me dolía, me acostaba y me dolía. Mucho tiempo durmiendo en posición fetal en flexión pronunciada para contener los dolores a medianoche. Recuerdo que una de las pocas cosas que calmaba mi dolor eran baños de tina con hielo, con inmersión parcial del cuerpo (piernas, pelvis y espalda baja). Básicamente porque mi tina no era lo suficientemente grande para que me pudiese sumergir completo (mi estatura es 1.95 mts). El mecanismo de mi fractura se denomina fractura por estrés (no se refiere a estrés psicológico, si no que de estrés en cargas verticales repetitivas) y fue allí que supe que tenía que hacerme cargo de mi espalda, generando un hábito de una rutina abdominal que me brindase alivio, estabilidad y la fortaleza necesaria para afrontar las actividades de la vida diaria. Una deficiente estabilidad lumbo-pélvica me había dado la oportunidad de aprender por experiencia propia a hacerme cargo de mi dolor.
 
-</html>
+Durante 2015 y 2016, mi carrera me llevó a acompañar y trabajar con las Selecciones Universitarias de Basquetbol y Voleibol UNAB, prestando mis conocimientos y experiencia a favor de deportistas participando del Torneo Nacional Universitario LDES, en sus versiones Concepción (2015) y Viña del Mar (2016).
+Es en esos mismos años, durante el período de campaña de Invierno, fue que llegué a trabajar en la Unidad de Pediatría General y Servicio de Urgencias en el Hospital de Niños Roberto del Río, acumulando mucha experiencia clínica y priorizando criterios de gravedad para disponer múltiples atenciones según necesidad. Siempre digo que esa fue “mi primera trinchera” en cuánto a experiencia clínica, enfrentando cientos sino miles de niños con afecciones respiratorias. Y como su nombre lo dice, “campaña” tenía un fin todos los años, siendo un profesional más sin estabilidad laboral y solo necesitado como un recurso limitado por un tiempo. 
+Ya para 2017, cansado de la inestabilidad laboral, decido emprender con dos socios en un negocio de comida móvil (sí, no tenía nada que ver con mi carrera), el cual duró tres años y que no vio frutos, teniendo que finalizarlo el 2020 con la llegada de la pandemia.
+Y como es la vida, volvería a desempeñar mis habilidades y destrezas en un servicio de Urgencias. Esta vez, en la ex Posta Central (Hospital de Urgencia y Asistencia Pública), en contexto de la pandemia COVID19. “Mi segunda trinchera” de escuela clínica, puliendo mis conocimientos y completando mi visión integral de abordaje de pacientes adultos con afecciones respiratorias.
+
+En diciembre del 2021 vivo nuevamente en carne propia la desvinculación de mi trabajo en la Ex Posta Central, por baja demanda de kinesiólogos en una pandemia cada vez más controlada y en regresión. Muy frustrado, determiné en esa oportunidad que apostaría y dedicaría todas mis energías y tiempo a mi emprendimiento como independiente. 
+En 2022, se dio la oportunidad de realizar una intervención de 10 semanas en el Centro Penitenciario Femenino de San Joaquín, con grupos de mujeres mayores con el objetivo de mejorar su fuerza, prevenir caídas y fortalecer musculatura de piso pélvico. Lo que desconocía en ese momento, es que mi intervención iría mucho más allá de realizar ejercicio terapéutico. 
+Ese mismo año, la vida me traería más experiencias laborales con grupos, haciendo 1 clase por semana a la Residencia de Personas Mayores (ELEAM) Nicola D’Onofrio  y a principios del 2do semestre, llevando mi experiencia al aula de clases, convirtiéndome en académico adjunto de la Universidad Las Américas sede Maipú para la asignatura “Evaluación Cardio-respiratoria” dirigida a estudiantes de 4to año de Kinesiología. Es en este mismo período, que también me desempeñaría como Tutor Clínico en Campus Clínico UDLA: Centro Interdisciplinarios de Simulación Hospitalaria / CIHS Pediátrico, recibiendo a estudiantes de 4to año para pasantías de 5 días en este entorno de simulación pediátrica. 
+Todas estas oportunidades calzaban con la búsqueda de mi nuevo estilo de vida: independiente, que yo manejara mi horario, durante el día, trabajo con impacto, valor hora de mi trabajo, etc. 
+Es en 2023, durante el 1er semestre que la docencia toma parte de mi camino nuevamente, impartiendo cátedra de la asignatura “Disfunción cardio-respiratoria” dirigida para estudiantes de 3er año de Kinesiología UDLA sede Maipú. En el mismo año, continuó mi trabajo como monitor de gimnasia terapéutica para personas mayores en la residencia Nicola D’Onofrio con frecuencia 1 vez semanal. De la misma forma, desde febrero hasta Octubre de ese año, continué prestando mis servicios dos veces a la semana a la Cárcel de Mujeres. 
+</p>
+  </section>
+  <section id="servicios">
+  <h2>Servicios profesionales</h2>
+  <div class="services-table-container">
+    <table class="services-table">
+      <thead>
+        <tr>
+          <th>Servicio</th>
+          <th>Precio</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>Kinesiterapia musculo-esquelética/motora</td>
+          <td>CLP $42.000 por sesión terapéutica a domicilio</td>
+        </tr>
+        <tr>
+          <td>Kinesiterapia respiratoria pediátrica/adultos</td>
+          <td>Valor reembolsable con Isapre con orden médica de kinesiterapia y boleta que yo emito, Usuarios Fonasa asumen el valor particular (sin reembolso)</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+</section>
